--- a/Refactoring/Refactoring/Refactoring.csproj
+++ b/Refactoring/Refactoring/Refactoring.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MemoryLogger.cs" />
+    <Compile Include="ILogger.cs" />
+    <Compile Include="Log.cs" />
+    <Compile Include="LogLevel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
